@@ -1,0 +1,43 @@
+#%SED_GAWK_PATH%
+
+# ------------------------------------------------------------
+# cawk is subjet to a MIT open-source licence
+# please refer to the MIT licence file for further information
+#
+# for %SED_VAR% change like GAWK_PATH, etc. please refer to
+# file support/tests.sed for further information
+#
+# purpose : this test generates an error if snmp v1v2 is set
+# ------------------------------------------------------------
+
+@include %SED_INCLUDE_PATH%
+
+BEGIN {
+}
+
+BEGINFILE {
+	pass = 1;
+	block_snmp = 0;
+}
+
+/^configure snmp/ && block_snmp == 0 {
+	block_snmp = 1;
+	next;
+}
+
+/^%SED_BK_NOKIA%community / && block_snmp == 1 {
+	print_err("snmp_v1v2_notset.nokia-sros.gawk",$0,FNR,"high","error");
+        pass = 0;
+	nextfile;
+}
+
+/^exit$/ && block_snmp == 1 {
+	block_snmp = 0;
+}
+
+ENDFILE {
+        if ( pass ) print_err("snmp_v1v2_notset.nokia-sros.gawk","snmp v1v2 is not set",0,"high","pass");
+}
+
+END {
+}
